--- a/src/Cli/dotnet/commands/dotnet-workload/clean/LocalizableStrings.resx
+++ b/src/Cli/dotnet/commands/dotnet-workload/clean/LocalizableStrings.resx
@@ -126,4 +126,7 @@
   <data name="VSWorkloadNotRemoved" xml:space="preserve">
     <value>Workload '{0}' was not removed because it is installed and managed by Visual Studio. Please uninstall this workload through Visual Studio to fully remove it.</value>
   </data>
+  <data name="InvalidWorkloadProcessPath" xml:space="preserve">
+    <value>The path '{0}' of the process is the root path of the drive, which is not allowed, or it is invalid/inaccessible. Please run dotnet in a valid and available path.</value>
+  </data>
 </root>
