--- a/src/Cli/dotnet/commands/dotnet-workload/clean/xlf/LocalizableStrings.es.xlf
+++ b/src/Cli/dotnet/commands/dotnet-workload/clean/xlf/LocalizableStrings.es.xlf
@@ -12,6 +12,11 @@
         <target state="new">Attempt to remove orphaned workload components and clean workload manifest files.</target>
         <note />
       </trans-unit>
+      <trans-unit id="InvalidWorkloadProcessPath">
+        <source>The path '{0}' of the process is the root path of the drive, which is not allowed, or it is invalid/inaccessible. Please run dotnet in a valid and available path.</source>
+        <target state="new">The path '{0}' of the process is the root path of the drive, which is not allowed, or it is invalid/inaccessible. Please run dotnet in a valid and available path.</target>
+        <note />
+      </trans-unit>
       <trans-unit id="VSWorkloadNotRemoved">
         <source>Workload '{0}' was not removed because it is installed and managed by Visual Studio. Please uninstall this workload through Visual Studio to fully remove it.</source>
         <target state="new">Workload '{0}' was not removed because it is installed and managed by Visual Studio. Please uninstall this workload through Visual Studio to fully remove it.</target>
